待完成购物车里面的每一项的布局

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,12 @@ dependencies:
   #路由管理
   fluro: ^1.4.0
 
+  #html解析
+  flutter_html: ^0.9.6
+
+  #持久化存储
+  shared_preferences: ^0.5.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
