个人中心页面完成，新增极光推送页面demo，项目结尾

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   #持久化存储
   shared_preferences: ^0.5.1
 
+  #极光推送服务
+  jpush_flutter: ^0.0.11
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
